# railguard

./: .clang-format  .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  README.md  gdb_formatter.py  think_board.md
.github/workflows/: cmake.yml
include/railguard/core/: engine.h  gpu_structs.h  mesh.h  renderer.h  triangle.h  window.h
include/railguard/core/renderer/: gpu_structs.h  render_pipeline.h  renderer.h  types.h
include/railguard/utils/: array.h  array_like.h  event_sender.h  hash_map.h  io.h  map.h  optional.h  storage.h  vector.h
include/railguard/utils/geometry/: mat4.h  quat.h  transform.h  vec3.h
include/railguard/utils/impl/: vector_impl.h
include/railguard/utils/vulkan/: descriptor_set_helpers.h
src/core/: engine.cpp  mesh.cpp
src/core/renderer/: render_pipeline.cpp  renderer_vulkan.cpp
src/core/window/: window_sdl2.cpp
src/utils/: hash_map.cpp  io.cpp  vector_impl.cpp
src/utils/geometry/: mat4.cpp  quat.cpp  transform.cpp
src/utils/vulkan/: descriptor_set_helpers.cpp
tests/: README.md  main.cpp
tests/core/: bigger_scene.cpp  cube.cpp  deferred.cpp  engine.cpp  t1.cpp  t2.cpp  triangle.cpp  window.cpp  window_api.cpp
tests/resources/: test.txt
tests/resources/meshes/: copyright.txt  lost_empire.mtl
tests/resources/shaders/deferred/: geometry.frag  geometry.vert  light.frag  light.vert
tests/resources/shaders/hello/: test.frag  test.vert
tests/resources/shaders/textured/: textured.frag  textured.vert
tests/resources/shaders/triangle/: triangle.frag  triangle.vert
tests/utils/: array.cpp  event_sender.cpp  hash_map.cpp  io.cpp  map.cpp  math.cpp  storage.cpp  vector.cpp
tests/utils/vector/: vector.cpp  vector_int.cpp  vector_of_vector.cpp
